RESOLVED FIXED132994
[Mac] naturalSize not updated when preload=metadata
https://bugs.webkit.org/show_bug.cgi?id=132994
Summary [Mac] naturalSize not updated when preload=metadata
Jer Noble
Reported 2014-05-16 11:48:43 PDT
[Mac] naturalSize not updated when preload=metadata
Attachments
Patch (4.12 KB, patch)
2014-05-16 12:09 PDT, Jer Noble
no flags
Patch for landing. (6.87 KB, patch)
2014-05-16 12:39 PDT, Jer Noble
no flags
Patch for landing. (5.97 KB, patch)
2014-05-16 12:42 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2014-05-16 12:09:46 PDT
Jer Noble
Comment 2 2014-05-16 12:16:25 PDT
Eric Carlson
Comment 3 2014-05-16 12:22:59 PDT
Comment on attachment 231582 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=231582&action=review > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:1485 > + if (AVAssetTrack* firstVideoTrack = [videoTracks firstObject]) > + presentationSizeDidChange(IntSize(CGSizeApplyAffineTransform([firstVideoTrack naturalSize], [firstVideoTrack preferredTransform]))); > + else > + presentationSizeDidChange(IntSize()); This won't be correct if the first video track isn't enabled.
Jer Noble
Comment 4 2014-05-16 12:39:57 PDT
Created attachment 231584 [details] Patch for landing.
Jer Noble
Comment 5 2014-05-16 12:42:23 PDT
Created attachment 231586 [details] Patch for landing.
WebKit Commit Bot
Comment 6 2014-05-16 12:43:39 PDT
Attachment 231586 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:1459: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 7 2014-05-16 14:32:41 PDT
Comment on attachment 231586 [details] Patch for landing. Clearing flags on attachment: 231586 Committed r168979: <http://trac.webkit.org/changeset/168979>
Ahmad Saleem
Comment 8 2023-07-27 16:46:05 PDT
Seems it landed but not got reverted (checked on GitHub with bug ID).
Radar WebKit Bug Importer
Comment 9 2023-07-27 16:47:20 PDT
Note You need to log in before you can comment on or make changes to this bug.